BAU: Stop mocking data objects in tests
There's no need to mock these, and it makes it harder to read when they're mocked.